@@ -31,7 +31,15 @@ SSL_CIPHER *     T_IV
 int *		 T_IV
 COMP_METHOD *	 T_IV
 X509_STORE *	 T_IV
-X509_NAME_STACK *  T_IV
+X509_NAME_STACK *   T_IV
+X509_VERIFY_PARAM * T_IV
+X509_POLICY_LEVEL * T_IV
+X509_POLICY_TREE *  T_IV
+X509_POLICY_NODE *  T_IV
+STACK_OF(X509_POLICY_NODE) *  T_IV
+STACK_OF(POLICYQUALINFO) * T_IV
+ASN1_OBJECT *       T_IV
+STACK_OF(ASN1_OBJECT) * T_IV
 ENGINE *         T_IV
 pem_password_cb *  T_IV
 generate_key_cb *  T_IV
